# terraform-tutorial

./: index.html  main.tf  search.html  terraform.tfstate
credits/: index.html
deploy/: index.html
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: aws.md  credits.md  deploy.md  index.md  terraform.md
docs/env/: pyvenv.cfg
docs/myenv/: pyvenv.cfg
docs/site/: index.html
docs/site/about/: index.html
docs/site/aws/: index.html
docs/site/search/: search_index.json
search/: search_index.json
terraform/: index.html
