[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["pingu01 <gabrielmnascimento04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
mkdocs-simple-blog = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
